# 91_trucks_chatbot_POC

./: 91_Trucks_Chatbot.ipynb  README.md  app.py  chatbot.py  deploy.txt  langchain_helper.py  pyproject.toml  requirements.txt
resources/: QnA.json  nvidia.txt  trucks_data.csv
tata_trucks_vectorstore/: index.faiss  index.pkl
