[project]
name = "chatbot-uvicorn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "google-generativeai>=0.8.5",
    "instructorembedding>=1.0.1",
    "jq>=1.8.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-groq>=0.3.2",
    "langchain-openai>=0.3.16",
    "matplotlib>=3.10.1",
    "notebook>=7.4.0",
    "numpy>=2.2.5",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "protobuf>=5.29.4",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.44.1",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
]
